create storage for avatar the user
